--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saugat K.C</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/png" href="/imgs/top.png">
+
 
     <!-- box icons -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
@@ -14,7 +16,7 @@
 
     <!-- Header design -->
     <header class="header">
-        <a href="#" class="logo">Saugat.<span class="animate" style="--i:1;"></span></a>
+        <a href="#" class="logo">Saugat...<span class="animate" style="--i:1;"></span></a>
 
         <div class="bx bx-menu" id="menu-icon"><span class="animate" style="--i:2;"></span></div>
 
